--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "format": "biome check --write ."
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=20"
-  }
+  },
+  "author": "Lucas Patrick"
 }
