feat: setup drizzle for hono

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,14 +2,26 @@
   "name": "@rpa/api",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/server.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "hono": "^4.6.12"
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.6.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.4",
+    "hono": "^4.6.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20.11.17",
+    "drizzle-kit": "^0.28.1",
     "tsx": "^4.7.1"
   }
 }
