--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "@hono/zod-validator": "^0.4.1",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.6.0",
     "dotenv": "^16.4.5",
