--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,10 +1,6 @@
 {
+  "extends": ["@rpa/tsconfig/base.json"],
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
-    "strict": true,
-    "verbatimModuleSyntax": true,
-    "skipLibCheck": true,
     "types": ["node"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
