feat: fetch data from server

--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -25,7 +25,8 @@
     /* Paths */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@server/*": ["../api/src/*"]
     }
   },
   "include": ["src"]
