--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
     "@hono/zod-validator": "^0.4.1",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.6.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.4",
     "hono": "^4.6.12",
