docs: make readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "biome check --write ."
+    "format": "biome check --write .",
+    "db:migrate": "turbo db:migrate"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
